# ari

./: .env.example  .gitignore  AGENTS.md  EXECUTION_INTENT.md  NEXT_CODEX_PROMPT_AUTONOMOUS_LOOP.md  README.md  SECURITY.md  alembic.ini  compose.yaml  pyproject.toml
audit/: ARCHITECTURE_AUDIT.md  NEXT_ACTIONS_FOR_CODE_AGENT.md  PRODUCT_STRATEGY_AUDIT.md  REPO_MAP.md  RISKS_AND_ISSUES.md  ROADMAP.md
config/: schema.sql
docs/: DOMAIN_MODULES.md  career-command-adapter.md  career-command.md  charter.md  deployment-plan.md  hub-spec.md  imessage-gateway.md  milestone-1-task-list.md  mvp-build-order.md  product-narrative.md  repo-structure.md  roadmap.md  state-schema.md  surface-status.md  telegram-gateway.md  topology.md
docs/ace/: read-only-dashboard-contract.md  read-only-dashboard-read-model.md
docs/api/: responses-planner-seam.md
docs/codex-prompts/: phase-3-25-cli-help-guard.md  phase-3-3-responses-api-planner-seam.md  phase-3-35-strict-schema-openai-planner.md
docs/execution/: safe-command-policy.md
docs/outreach/: linkedin-draft.md
docs/progress/: 2026-04-24-demo-findings.md  2026-04-24-openai-planner-seam.md  2026-05-04-coding-loop.md
docs/skills/: ari-native-skill-contract.md  coding-loop-skill.md  self-documentation-skill.md  self-documentation-stage-1-readiness.md  skill-inventory.md
docs/status/: current-architecture.md  next-step.md  open-blockers.md  phase-log.md
imports/ace-prototype/: README.md  package-lock.json  package.json
imports/ace-prototype/app/: manifest.ts
imports/ace-prototype/src/core/: config.ts
imports/ace-prototype/tests/: helpers.ts  orchestration-classifier.test.ts
imports/ace-prototype/workspace/: README.md
imports/networking_crm-prototype/: __init__.py  ari.py  main.py  record.py
imports/networking_crm-prototype/core/: paths.py
imports/networking_crm-prototype/modules/memory/: api.py  db.py
imports/networking_crm-prototype/modules/networking/: cli.py
imports/networking_crm-prototype/modules/notes/: __init__.py  api.py
imports/networking_crm-prototype/suits/: __init__.py
migrations/: env.py
migrations/versions/: 20260410_0001_initial_schema.py  20260410_0002_orchestration_run_history.py  20260422_0003_controller_trajectory.py  20260422_0004_controller_event_stream.py  20260422_0005_approval_workflow.py  20260619_0006_conversation_states.py  20260619_0007_skill_registry_and_audit.py  20260619_0008_job_application_enrichment.py
scripts/: _ari_common.py  _ensure-postgres.sh  _imessage.py  _rotate-logs.sh  ari-killswitch.sh  ari-resume.sh  ari-status.sh  career-to-openloops.py  career_command_smoke.sh  com.ari.daily-orchestration.plist  com.ari.imessage-dump.plist  com.ari.imessage-dump.plist.example  com.ari.imessage-poll.plist  daily-check.sh  imessage-ingest.py  imessage-poll.sh  notify-alerts.py  start-ari.sh  stop-ari.sh
scripts/dev/: smoke_openai_planner.py  smoke_openai_real_repo_plan.py  smoke_telegram_gateway.py
scripts/telegram_gateway/: install_launch_agent.sh  logs.sh  start.sh  status.sh  stop.sh
services/ari-hub/: .env.example  .gitignore  README.md  architecture.md  middleware.ts  package-lock.json  package.json  roadmap.md
services/ari-hub/app/: globals.css  layout.tsx  page.tsx
services/ari-hub/tests/: agent.test.ts  api-bridge.test.ts  api.test.ts  auth.test.ts  background-runtime-pause.test.ts  helpers.ts  imessage-bridge.test.ts  imessage-cycle.test.ts  memory.test.ts  operator-execution.test.ts  orchestration-classifier.test.ts  orchestration.test.ts  workspace.test.ts
tests/unit/: test_api_orchestration_history.py  test_approval_workflow.py  test_ari_core_typed_execution.py  test_ari_overview_read_model.py  test_canonical_api.py  test_canonical_core_cli.py  test_career_command_adapter.py  test_career_command_cli.py  test_cli_approvals.py  test_cli_history.py  test_cli_state.py  test_coding_loop.py  test_coding_loop_chains_read_model.py  test_command_policy.py  test_content_ideas_read_model.py  test_decision_control.py  test_decision_controller.py  test_decision_dispatch.py  test_decision_engine.py  test_decision_evaluate.py  test_decision_models.py  test_decision_persistence.py  test_events.py  test_execution_approval_models.py  test_execution_controller.py  test_execution_module.py  test_execution_pause.py  test_hub_history_page.py  test_imessage_ingest.py  test_job_application_enrichment.py  test_lifecycle_lessons_read_model.py  test_memory.py  test_memory_blocks.py  test_models.py  test_openai_responses_planner.py  test_orchestration.py  test_orchestration_decisions.py  test_orchestration_history.py  test_pending_approvals_read_model.py  test_routines.py  (+27 more)
tools/: ari-api-dev  ari-greet  ari-hub-dev  ari-root  ari-start  ari-status  ari-test
(+211 files in other folders)
