[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ari"
version = "0.1.0"
description = "Canonical ARI brain, API, and hub integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.9.0",
  "python-dotenv>=1.0.1",
  "typing-extensions>=4.12.2",
  "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "mypy>=1.13.0",
  "pytest>=8.3.3",
  "pytest-cov>=6.0.0",
  "ruff>=0.7.2",
]

[project.scripts]
ari = "ari_core.ari:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
  "services/ari-core/src",
  "services/ari-api/src",
]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = [
  "services/ari-core/src",
  "services/ari-api/src",
]
warn_unused_configs = true

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = [
  "services/ari-core/src",
  "services/ari-api/src",
]
include = ["ari_*"]
